Loqate/main/default/objects/Email_Integration__c/Email_Integration__c.object-meta.xml
<CustomObject>
    <label>Email Integration</label>
    <nameField>
        <label>Email Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>