Loqate/main/default/objects/Email_Integration__c/fields/Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Email_Field__c</fullName>
    <label>Email Field</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>