Loqate/main/default/objects/Email_Integration__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <referenceTo>Setting__c</referenceTo>
    <relationshipLabel>Email Integrations</relationshipLabel>
    <relationshipName>Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>